[Implement] deserialization of Server and ServerVariable
